--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -23,6 +23,10 @@ models:
                 - returned
       - name: customer_id
         data_tests:
+          - not_null
           - relationships:
               to: ref('stg_jaffle_shop__customers')
               field: customer_id
+      - name: order_date
+        data_tests:
+          - not_null
