added jaffle_shop descpriptions to source

--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -2,6 +2,7 @@ sources:
   - name: jaffle_shop
     database: raw
     schema: jaffle_shop
+    description: A clone of a Postgres application database.
     config:
           freshness: 
             error_after:
@@ -13,8 +14,10 @@ sources:
           loaded_at_field: _etl_loaded_at
     tables:
       - name: customers
+        description: Raw customer data
         columns:
           - name: id
+            description: Primary Key for customer data
             data_tests:
               - unique
               - not_null
@@ -23,13 +26,16 @@ sources:
           null
         
       - name: orders
+        description: Raw orders data
         columns:
           - name: id
+            description: Primark Key for order data
             data_tests:
               - unique
               - not_null
 
       - name: customers_copy
+        description: Raw copy of the customers data
         freshness: 
           null
         
