--- a/models/staging/stripe/_src_stripe.yml
+++ b/models/staging/stripe/_src_stripe.yml
@@ -15,3 +15,8 @@ sources:
               count: 96
               period: hour
           loaded_at_field: _batched_at
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
